31Mar01=======================================================================
1. added agwrestart command
2. add Iains Windoze installation manual (g0vgs)
3. various alterations to adminmanual and initial version of the CVS changes
file (g0vgs)
30Mar01=======================================================================
1. fix errors on accept in ExtMsg and in Msg
2. fix the non-blocking problems of connects (and other things in general).
non-blocking only works for unix implementations at the moment.
3. add rinit command (sends a PC20)
4. improve debuging so that stuff is always escaped and a new 'raw' debug 
mode that shows everything sent and received in glorious hex and characters
29Mar01=======================================================================
1. add better tracking of AGW circuits (possibly)
2. add set and unset/agwmonitor (ing) [for all the notice it seems to take]
28Mar01=======================================================================
1. AGW engine stuff now accepts incoming calls and at least attempts to do
outgoing ones. YMMV.
2. fixed 'always' telnet on a client line in a connect script
27Mar01=======================================================================
1. add first cut at an AGW Engine. Copy /spider/perl/AGWConnect.pm to 
/spider/local and edit it appropriately. You shouldn't need a login and passwd
if you are using the default setup. It may allow incoming connects (and then
again it may not - I don't have a reliable infrostructure to test with at the
moment). The AGW Engine is a M$ thingy, but that don't preclude you connecting
to it from a unix box. 
22Mar01=======================================================================
1. edit the helpfile for set/debug and add help for show/debug
2. Allow ^Z again on messages
3. Added back onboard support for ax25 OUTBOUND connections. You will need
exactly the same facilities as before (ie netrom_call, ax25_call suid root 